# krishiDoc-pred

./: Dockerfile  README.md  inference.py  main.py  plant_disease.onnx  plant_disease.onnx.data  pyproject.toml
notebooks/: Far_Away_Japan_Dataset_Curation.ipynb  Far_Away_Train.ipynb
