[project]
name = "krishidoc-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
